# zagreus

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  AimGods_Shipping.sln  CMakeLists.txt  README.md  Zagreus.sln  buildscript.bat  format.cmd
AbilityPickerV2/: Form1.Designer.cs  Form1.cs  Program.cs
AimGods_Client/: AimGods_Client.vcxproj  AimGods_Client.vcxproj.filters  FunctionQueue.h  Hooks.cpp  Hooks.h  Mem.cpp  Mem.h  SDK.hpp  dllmain.cpp
AimGods_Client/SDK/: ABP_Sheep_parameters.hpp  AIModule_parameters.hpp  AIModule_structs.hpp  ActorSequence_structs.hpp  AdditionalCascades_structs.hpp  AimGods_parameters.hpp  AndroidPermission_parameters.hpp  AnimBP_Character1PFinal_classes.hpp  AnimBP_Character1PFinal_functions.cpp  AnimBP_Character3P_parameters.hpp  AnimGraphRuntime_classes.hpp  AnimGraphRuntime_parameters.hpp  AnimationSharing_parameters.hpp  AppleImageUtils_classes.hpp  AsyncLoadingScreen_structs.hpp  AudioMixer_structs.hpp  AugmentedReality_parameters.hpp  BP_AGAIController_BlueTeam_classes.hpp  BP_AGAIController_BlueTeam_functions.cpp  BP_AGAIController_RedTeam_classes.hpp  BP_AGAIMinion_BlueTeam_classes.hpp  BP_AGAIMinion_BlueTeam_functions.cpp  BP_AGAIMinion_RedTeam_classes.hpp  BP_AGCharacter_RedTeam_classes.hpp  BP_AGCharacter_functions.cpp  BP_AGGameInstance_parameters.hpp  BP_AGGameMode_classes.hpp  BP_AGPlayerController_classes.hpp  BP_AGPlayerController_functions.cpp  BP_AGPlayerState_classes.hpp  BP_AGPlayerState_functions.cpp  BP_AGSpectatorPawn_classes.hpp  BP_AGSpectatorPawn_functions.cpp  BP_AGWeaponRed_classes.hpp  BP_AGWeapon_classes.hpp  BP_BaseGate_functions.cpp  BP_Blizzard_functions.cpp  BP_ButtonManager_Functions_classes.hpp  BP_ButtonManager_Functions_functions.cpp  BP_ButtonManager_Functions_parameters.hpp  (+403 more)
AimGods_Client_Core/: CMakeLists.txt  varbuilder.cmake
AimGods_Client_Core/src/: dllmain.cpp
AimGods_Common/include/: CMakeLists.txt  Core.hpp  FunctionQueue.hpp  Mem.hpp  PropertyFixup.hpp  ThreadManager.hpp
AimGods_Common/include/SDK/: ABP_Sheep_classes.hpp  ABP_Sheep_functions.cpp  AIModule_classes.hpp  A_Leakes_01_Decal_classes.hpp  A_Leakes_02_Decal_classes.hpp  A_Leakes_02_Decal_functions.cpp  ActorSequence_classes.hpp  AimGods_classes.hpp  AimGods_functions.cpp  AnimBP_Character1PFinal_parameters.hpp  AnimBP_Character3P_classes.hpp  AnimBP_FinalWeapon_classes.hpp  AnimBP_FinalWeapon_parameters.hpp  AnimGraphRuntime_functions.cpp  AnimGraphRuntime_structs.hpp  AnimationSharing_classes.hpp  AnimationSharing_structs.hpp  AudioCapture_classes.hpp  AvfMediaFactory_classes.hpp  BP_AGCameraManager_functions.cpp  BP_AGCharacter_BlueTeam_classes.hpp  BP_AGCharacter_BlueTeam_functions.cpp  BP_AGCharacter_RedTeam_functions.cpp  BP_AGGameInstance_classes.hpp  BP_AGGameMode_Test_classes.hpp  BP_AGGameMode_parameters.hpp  BP_AGGameState_classes.hpp  BP_AGGameState_parameters.hpp  BP_AGHUD_parameters.hpp  BP_AGWeapon_functions.cpp  BP_AGWeapon_parameters.hpp  BP_ActionBarDragAndDropPayload_classes.hpp  BP_BaseGate_classes.hpp  BP_BaseGate_parameters.hpp  BP_CamShake_RifleFire_classes.hpp  BP_DamageBox_parameters.hpp  BP_LoadoutDragAndDropPayload_functions.cpp  BP_MainMenuChar_classes.hpp  BP_ShopSphere_functions.cpp  BP_Thunderstorm_classes.hpp  (+362 more)
AimGods_Common/src/: Core.cpp
AimGods_Server/: AimGods_DevBuild.vcxproj.filters  AimGods_Server.vcxproj  AimGods_Server.vcxproj.filters  DX11Hook.cpp  DX11Hook.h  DebugMenu.cpp  DebugMenu.h  Events.cpp  FunctionQueue.cpp  FunctionQueue.h  Globals.h  Hooks.cpp  Mem.cpp  Mem.h  Scripting.cpp  ThreadManager.cpp  ThreadManager.h  Utils.h  dllmain.cpp
AimGods_Server/SDK/: AIModule_functions.cpp  A_Leakes_01_Decal_functions.cpp  AimGods_structs.hpp  AndroidPermission_classes.hpp  AnimBP_Character3P_functions.cpp  AnimBP_FinalWeapon_functions.cpp  AnimBP_Wizard_ThirdPerson_classes.hpp  AnimationCore_structs.hpp  AppleImageUtils_parameters.hpp  ArchVisCharacter_classes.hpp  AssetRegistry_classes.hpp  AssetRegistry_parameters.hpp  AssetRegistry_structs.hpp  AssetTags_parameters.hpp  AsyncLoadingScreen_classes.hpp  AsyncLoadingScreen_functions.cpp  AudioCapture_parameters.hpp  AudioMixer_classes.hpp  AudioMixer_parameters.hpp  AudioPlatformConfiguration_structs.hpp  AugmentedReality_classes.hpp  AugmentedReality_functions.cpp  AugmentedReality_structs.hpp  BP_AGAIController_classes.hpp  BP_AGAIController_functions.cpp  BP_AGCameraManager_classes.hpp  BP_AGCharacter_classes.hpp  BP_AGCharacter_parameters.hpp  BP_AGGameInstance_functions.cpp  BP_AGGameMode_functions.cpp  BP_AGGameState_functions.cpp  BP_AGHUD_classes.hpp  BP_AGHUD_functions.cpp  BP_AGPlayerController_parameters.hpp  BP_AGPlayerState_parameters.hpp  BP_AGWeaponRed_functions.cpp  BP_ActionBarDragAndDropPayload_functions.cpp  BP_Blizzard_classes.hpp  BP_Blizzard_parameters.hpp  BP_Crystal_3_classes.hpp  (+378 more)
AimGods_Server/kiero/: kiero.cpp
AimGods_Server_Core/: CMakeLists.txt
AimGods_Server_Core/src/: dllmain.cpp
AimGods_WebServer/: AimGods_WebServer.csproj  Program.cs  settings.json
AimGods_WebServer/Properties/: launchSettings.json
Launcher/: App.config  Form1.Designer.cs  Form1.cs  Form1.resx  Launcher.csproj
Launcher/Properties/: Settings.Designer.cs  Settings.settings
ServerCLI/: Program.cs  ServerCLI.csproj
